--- a/index.html
+++ b/index.html
@@ -1,277 +1,1 @@
-<!DOCTYPE html>
-<html lang="en" class="page">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Miami</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/main.48b3db1d.css">
-    <script src="/main.d8ebb8d6.js" defer=""></script>
-  <script src="/main.48b3db1d.js"></script></head>
-  <body class="page__body">
-    <header class="header page__section">
-      <div class="container">
-        <div class="header__content">
-          <div class="top-actions">
-            <a href="#menu" class="icon icon--menu"></a>
-
-            <a href="#" class="logo">
-              <img src="/logo.6023b87e.png" alt="Miami Condo Kings" class="logo__image">
-            </a>
-
-            <a href="tel: +1 234 555-55-55" class="icon icon--phone header__call">
-            </a>
-          </div>
-
-          <h1 class="header__title">
-            Miami
-            <br>
-            Condo Kings
-          </h1>
-        </div>
-      </div>
-    </header>
-
-    <nav class="page__menu menu" id="menu">
-      <div class="container">
-        <div class="menu__content">
-          <div class="menu__top top-actions">
-            <a href="#" class="icon icon--cross"></a>
-
-            <a href="#" class="logo">
-              <img src="/logo.6023b87e.png" alt="Miami Condo Kings" class="logo__image">
-            </a>
-          </div>
-
-          <ul class="menu__list">
-            <li class="menu__item">
-              <a href="#" class="menu__link">home</a>
-            </li>
-            <li class="menu__item">
-              <a href="#about-us" class="menu__link">about us</a>
-            </li>
-            <li class="menu__item">
-              <a href="#gallery" class="menu__link">gallery</a>
-            </li>
-            <li class="menu__item">
-              <a href="#testimonials" class="menu__link">testimonials</a>
-            </li>
-            <li class="menu__item">
-              <a href="#contact-us" class="menu__link">Contacts</a>
-            </li>
-          </ul>
-
-          <a href="tel:+1 234 555-55-55" class="menu__call menu__call--phone">
-            +1 234 555-55-55
-          </a>
-          <a href="tel:+1 234 555-55-55" class="menu__call menu__call--action">
-            call to order
-          </a>
-        </div>
-      </div>
-    </nav>
-
-    <main>
-      <section class="page__section about" id="about-us">
-        <div class="container">
-          <div class="grid grid--desktop">
-            <div class="grid__item grid__item--1-4">
-              <h2 class="about__title">
-                Miami best
-                <br>
-                Real estate
-
-                <a href="#" class="about__title-link">here</a>
-              </h2>
-            </div>
-
-            <div class="grid__item grid__item--7-12">
-              <a href="#" class="about__subtitle">
-                Over 50 years experience in love.
-              </a>
-
-              <p class="about__paragraph">
-                Mazel and VA Tsukkerman in his "Analysis of musical works." Pointillism, which originated in the music of the early twentieth century, microforms, found a distant historical.
-              </p>
-
-              <p class="about__paragraph">
-                The market leader in real estate since 2003. Awards Real Estate Company, 2010, 2011, 2013. More than 200 satisfied customers premium segment. We focus only on new buildings and high-level doskanalno know this area better than other specialists.Working directly with developers - so have more useful information about the profitable deals.
-              </p>
-
-              <p class="about__paragraph about__paragraph--important">
-                We will never be late!
-                <br>
-                Guaranteed secure transaction - 100%
-              </p>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <section class="page__section gallery" id="gallery">
-        <div class="container">
-          <h2 class="page__section-title">Gallery</h2>
-
-          <div class="gallery__place place">
-            <div class="place__photos">
-              <div class="grid">
-                <div class="grid__item grid__item--desktop-1-8">
-                  <div class="place__photo-container">
-                    <img src="/1.c25136ba.jpg" alt="Place 1" class="place__photo">
-                  </div>
-                </div>
-
-                <div class="grid__item grid__item--desktop-9-12">
-                  <div class="place__photo-container">
-                    <img src="/2.64dfd0d3.jpg" alt="Place 1" class="place__photo">
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <div class="place__description gallery__links">
-              <a href="https://goo.gl/maps/HjhcaRNAGFhhXQoH9" class="place__link">
-                Marina Palms
-              </a>
-               / North Miami Beach, FL 33162
-            </div>
-          </div>
-
-          <div class="gallery__place place">
-            <div class="place__photos">
-              <div class="grid">
-                <div class="grid__item grid__item--desktop-1-6">
-                  <div class="place__photo-container">
-                    <img src="/3.a97e57a2.jpg" alt="Place 1" class="place__photo">
-                  </div>
-                </div>
-
-                <div class="grid__item grid__item--desktop-7-12">
-                  <div class="place__photo-container">
-                    <img src="/4.df3eb52f.jpg" alt="Place 1" class="place__photo">
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <div class="place__description">
-              <a href="https://goo.gl/maps/Fah1ceSQncs9k8BA9" class="place__link">
-                Edition Residens
-              </a>
-              / Miami Beach, FL 33139
-            </div>
-          </div>
-
-          <div class="gallery__place place">
-            <div class="place__photos">
-              <div class="grid">
-                <div class="grid__item grid__item--desktop-1-4">
-                  <div class="place__photo-container">
-                    <img src="/5.df8f9d8a.jpg" alt="Place 1" class="place__photo">
-                  </div>
-                </div>
-
-                <div class="grid__item grid__item--desktop-5-12">
-                  <div class="place__photo-container">
-                    <img src="/6.6288d327.jpg" alt="Place 1" class="place__photo">
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <div class="place__description">
-              <a href="https://goo.gl/maps/Nx51cPYpXpUv77NY7" class="place__link">
-                Faena House
-              </a>
-                / Miami Beach, FL 33140
-            </div>
-          </div>
-
-          <div class="grid grid--desktop">
-            <div class="grid__item grid__item--6-7">
-              <a href="#" class="button">View all</a>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <section class="page__section testimonials" id="testimonials">
-        <div class="container">
-          <h2 class="page__section-title">Testimonials</h2>
-
-          <div class="grid grid--desktop">
-            <div class="testimonials__item grid__item grid__item--1-4">
-              <div class="testimonial">
-                <div class="testimonial__photo-container">
-                  <img src="/1.f9674674.jpg" alt="Leslie Mckinney" class="testimonial__photo">
-                </div>
-
-                <h3 class="testimonial__name">
-                  <a href="#" class="link">Leslie Mckinney</a>
-                </h3>
-
-                <div class="testimonial__role">
-                  CEO
-                </div>
-
-                <p class="testimonial__about">
-                  Nice work, Certificates National Association of Realtors (USA)
-                </p>
-              </div>
-            </div>
-
-            <div class="testimonials__item grid__item grid__item--5-8">
-              <div class="testimonial__photo-container">
-                <img src="/2.9dded32d.jpg" alt="Scarlett Hawkins" class="testimonial__photo">
-              </div>
-
-              <h3 class="testimonial__name">
-                <a href="#" class="link">Leslie Mckinney</a>
-              </h3>
-
-              <div class="testimonial__role">
-                Senior Vice President
-              </div>
-
-              <p class="testimonial__about">
-                My soul is illuminated by an unearthly joy, as these beautiful spring morning, which I enjoy with all my heart
-              </p>
-            </div>
-
-            <div class="testimonials__item grid__item grid__item--9-12">
-              <div class="testimonial__photo-container">
-                <img src="/3.8f7da0fb.jpg" alt="Max Henry" class="testimonial__photo">
-              </div>
-
-              <h3 class="testimonial__name">
-                <a href="#" class="link">Leslie Mckinney</a>
-              </h3>
-
-              <div class="testimonial__role">
-                Chief Design Officer
-              </div>
-
-              <p class="testimonial__about">
-                When my lovely valley of steam rises and half-day sun is above an impermeable
-              </p>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <section class="page__section">
-        <div class="container">
-          <h2 class="page__section-title" id="contact-us">Contact us</h2>
-        </div>
-      </section>
-    </main>
-
-    <footer class="footer">
-      <a href="#" class="logo">
-        <img src="/logo.6023b87e.png" alt="Miami Condo Kings" class="logo__image">
-      </a>
-    </footer>
-  </body>
-</html>
+<!DOCTYPE html><html lang="en" class="page"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>Miami</title><link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com"><link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet"><link rel="stylesheet" href="main.2556c475.css"><script src="main.b2b0b56a.js" defer></script></head><body class="page__body"> <header class="header page__section"> <div class="container"> <div class="header__content"> <div class="top-actions"> <a href="#menu" class="icon icon--menu"></a> <a href="#" class="logo"> <img src="logo.f1453457.png" alt="Miami Condo Kings" class="logo__image"> </a> <a href="tel: +1 234 555-55-55" class="icon icon--phone header__call"> </a> </div> <h1 class="header__title"> Miami <br> Condo Kings </h1> </div> </div> </header> <nav class="page__menu menu" id="menu"> <div class="container"> <div class="menu__content"> <div class="menu__top top-actions"> <a href="#" class="icon icon--cross"></a> <a href="#" class="logo"> <img src="logo.f1453457.png" alt="Miami Condo Kings" class="logo__image"> </a> </div> <ul class="menu__list"> <li class="menu__item"> <a href="#" class="menu__link">home</a> </li> <li class="menu__item"> <a href="#about-us" class="menu__link">about us</a> </li> <li class="menu__item"> <a href="#gallery" class="menu__link">gallery</a> </li> <li class="menu__item"> <a href="#testimonials" class="menu__link">testimonials</a> </li> <li class="menu__item"> <a href="#contact-us" class="menu__link">Contacts</a> </li> </ul> <a href="tel:+1 234 555-55-55" class="menu__call menu__call--phone"> +1 234 555-55-55 </a> <a href="tel:+1 234 555-55-55" class="menu__call menu__call--action"> call to order </a> </div> </div> </nav> <main> <section class="page__section about" id="about-us"> <div class="container"> <div class="grid grid--desktop"> <div class="grid__item grid__item--1-4"> <h2 class="about__title"> Miami best <br> Real estate <a href="#" class="about__title-link">here</a> </h2> </div> <div class="grid__item grid__item--7-12"> <a href="#" class="about__subtitle"> Over 50 years experience in love. </a> <p class="about__paragraph"> Mazel and VA Tsukkerman in his "Analysis of musical works." Pointillism, which originated in the music of the early twentieth century, microforms, found a distant historical. </p> <p class="about__paragraph"> The market leader in real estate since 2003. Awards Real Estate Company, 2010, 2011, 2013. More than 200 satisfied customers premium segment. We focus only on new buildings and high-level doskanalno know this area better than other specialists.Working directly with developers - so have more useful information about the profitable deals. </p> <p class="about__paragraph about__paragraph--important"> We will never be late! <br> Guaranteed secure transaction - 100% </p> </div> </div> </div> </section> <section class="page__section gallery" id="gallery"> <div class="container"> <h2 class="page__section-title">Gallery</h2> <div class="gallery__place place"> <div class="place__photos"> <div class="grid"> <div class="grid__item grid__item--desktop-1-8"> <div class="place__photo-container"> <img src="1.9f94d235.jpg" alt="Place 1" class="place__photo"> </div> </div> <div class="grid__item grid__item--desktop-9-12"> <div class="place__photo-container"> <img src="2.718d87d5.jpg" alt="Place 1" class="place__photo"> </div> </div> </div> </div> <div class="place__description gallery__links"> <a href="https://goo.gl/maps/HjhcaRNAGFhhXQoH9" class="place__link"> Marina Palms </a> / North Miami Beach, FL 33162 </div> </div> <div class="gallery__place place"> <div class="place__photos"> <div class="grid"> <div class="grid__item grid__item--desktop-1-6"> <div class="place__photo-container"> <img src="3.1952f600.jpg" alt="Place 1" class="place__photo"> </div> </div> <div class="grid__item grid__item--desktop-7-12"> <div class="place__photo-container"> <img src="4.28e1045d.jpg" alt="Place 1" class="place__photo"> </div> </div> </div> </div> <div class="place__description"> <a href="https://goo.gl/maps/Fah1ceSQncs9k8BA9" class="place__link"> Edition Residens </a> / Miami Beach, FL 33139 </div> </div> <div class="gallery__place place"> <div class="place__photos"> <div class="grid"> <div class="grid__item grid__item--desktop-1-4"> <div class="place__photo-container"> <img src="5.e9ca33db.jpg" alt="Place 1" class="place__photo"> </div> </div> <div class="grid__item grid__item--desktop-5-12"> <div class="place__photo-container"> <img src="6.11649f7b.jpg" alt="Place 1" class="place__photo"> </div> </div> </div> </div> <div class="place__description"> <a href="https://goo.gl/maps/Nx51cPYpXpUv77NY7" class="place__link"> Faena House </a> / Miami Beach, FL 33140 </div> </div> <div class="grid grid--desktop"> <div class="grid__item grid__item--6-7"> <a href="#" class="button">View all</a> </div> </div> </div> </section> <section class="page__section testimonials" id="testimonials"> <div class="container"> <h2 class="page__section-title">Testimonials</h2> <div class="grid grid--desktop"> <div class="testimonials__item grid__item grid__item--1-4"> <div class="testimonial"> <div class="testimonial__photo-container"> <img src="1.4f1ca21e.jpg" alt="Leslie Mckinney" class="testimonial__photo"> </div> <h3 class="testimonial__name"> <a href="#" class="link">Leslie Mckinney</a> </h3> <div class="testimonial__role"> CEO </div> <p class="testimonial__about"> Nice work, Certificates National Association of Realtors (USA) </p> </div> </div> <div class="testimonials__item grid__item grid__item--5-8"> <div class="testimonial__photo-container"> <img src="2.b48fc5d5.jpg" alt="Scarlett Hawkins" class="testimonial__photo"> </div> <h3 class="testimonial__name"> <a href="#" class="link">Leslie Mckinney</a> </h3> <div class="testimonial__role"> Senior Vice President </div> <p class="testimonial__about"> My soul is illuminated by an unearthly joy, as these beautiful spring morning, which I enjoy with all my heart </p> </div> <div class="testimonials__item grid__item grid__item--9-12"> <div class="testimonial__photo-container"> <img src="3.19490aac.jpg" alt="Max Henry" class="testimonial__photo"> </div> <h3 class="testimonial__name"> <a href="#" class="link">Leslie Mckinney</a> </h3> <div class="testimonial__role"> Chief Design Officer </div> <p class="testimonial__about"> When my lovely valley of steam rises and half-day sun is above an impermeable </p> </div> </div> </div> </section> <section class="conyact-us page__section"> <div class="container"> <h2 class="page__section-title" id="contact-us">Contact us</h2> </div> </section> </main> <footer class="footer"> <a href="#" class="logo"> <img src="logo.f1453457.png" alt="Miami Condo Kings" class="logo__image"> </a> </footer> </body></html>
