Implemented 'contact us' section

--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
               <img src="/logo.6023b87e.png" alt="Miami Condo Kings" class="logo__image">
             </a>
 
-            <a href="tel: +1 234 555-55-55" class="icon icon--phone header__call">
+            <a href="tel: +1 234 555-55-55" class="
+                icon
+                icon--phone
+                header__call
+              ">
             </a>
           </div>
 
@@ -202,7 +206,11 @@
           <h2 class="page__section-title">Testimonials</h2>
 
           <div class="grid grid--desktop">
-            <div class="testimonials__item grid__item grid__item--1-4">
+            <div class="
+              testimonials__item
+              grid__item
+              grid__item--1-4
+            ">
               <div class="testimonial">
                 <div class="testimonial__photo-container">
                   <img src="/1.f9674674.jpg" alt="Leslie Mckinney" class="testimonial__photo">
@@ -222,7 +230,11 @@
               </div>
             </div>
 
-            <div class="testimonials__item grid__item grid__item--5-8">
+            <div class="
+              testimonials__item
+              grid__item
+              grid__item--5-8
+            ">
               <div class="testimonial__photo-container">
                 <img src="/2.9dded32d.jpg" alt="Scarlett Hawkins" class="testimonial__photo">
               </div>
@@ -240,7 +252,11 @@
               </p>
             </div>
 
-            <div class="testimonials__item grid__item grid__item--9-12">
+            <div class="
+              testimonials__item
+              grid__item
+              grid__item--9-12
+            ">
               <div class="testimonial__photo-container">
                 <img src="/3.8f7da0fb.jpg" alt="Max Henry" class="testimonial__photo">
               </div>
@@ -261,14 +277,69 @@
         </div>
       </section>
 
-      <section class="conyact-us page__section">
+      <section class="contact-us page__section">
         <div class="container">
           <h2 class="page__section-title" id="contact-us">Contact us</h2>
 
           <div class="grid grid--desktop">
-            <div class="grid__item grid__item--1-2"></div>
-            <div class="grid__item grid__item--4-5"></div>
-            <div class="grid__item grid__item--8-12"></div>
+            <div class="grid__item grid__item--1-2">
+              <div class="contact-us__info">
+                <div class="contact-us__info-title">
+                  Phone
+                </div>
+
+                <div>
+                  <a href="tel:+1 234 5555-55-55" class="contact-us__info-link">
+                    +1 234 5555-55-55
+                  </a>
+                </div>
+              </div>
+
+              <div class="contact-us__info">
+                <div class="contact-us__info-title">
+                  Email
+                </div>
+
+                <div>
+                  <a href="mailto:hello@miami.com" class="contact-us__info-link">
+                    hello@miami.com
+                  </a>
+                </div>
+              </div>
+            </div>
+
+            <div class="grid__item grid__item--4-5">
+              <div class="contact-us__info contact-us__info--last">
+                <div class="contact-us__info-title">
+                  Address
+                </div>
+
+                <div>
+                  <a href="https://goo.gl/maps/Vo2Ke8x38DwwZWHZ7" class="contact-us__info-link">
+                    400 first ave. n.
+                    <br>
+                    suite 700
+                    <br>
+                    Minneapolis, MN 55401
+                  </a>
+                </div>
+              </div>
+            </div>
+
+            <div class="grid__item grid__item--8-12">
+              <form action="#" method="get">
+                <input name="name" type="text" placeholder="Name" class="contact-us__field form-field">
+                <input name="email" type="email" placeholder="Email" class="contact-us__field form-field">
+                <textarea name="message" placeholder="Message" class="
+                    contact-us__field
+                    contact-us__field--last
+                    form-field
+                    form-field--textarea
+                  "></textarea>
+
+                <button class="button button--primary">Consultation</button>
+              </form>
+            </div>
           </div>
         </div>
       </section>
