Added changes according to checklist

--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Miami</title>
+    <link rel="icon" type="image/x-icon" href="/favicon.8003f84c.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/main.48b3db1d.css">
     <script src="/main.d8ebb8d6.js" defer=""></script>
   <script src="/main.48b3db1d.js"></script></head>
-  <body class="page__body">
+  <body class="page__body page__body--with-menu">
     <header class="header page__section">
       <div class="container">
         <div class="header__content">
@@ -136,7 +137,7 @@
             </div>
 
             <div class="place__description gallery__links">
-              <a href="https://goo.gl/maps/HjhcaRNAGFhhXQoH9" class="place__link">
+              <a href="https://goo.gl/maps/HjhcaRNAGFhhXQoH9" class="place__link" target="_blank">
                 Marina Palms
               </a>
                / North Miami Beach, FL 33162
@@ -161,7 +162,7 @@
             </div>
 
             <div class="place__description">
-              <a href="https://goo.gl/maps/Fah1ceSQncs9k8BA9" class="place__link">
+              <a href="https://goo.gl/maps/Fah1ceSQncs9k8BA9" class="place__link" target="_blank">
                 Edition Residens
               </a>
               / Miami Beach, FL 33139
@@ -186,7 +187,7 @@
             </div>
 
             <div class="place__description">
-              <a href="https://goo.gl/maps/Nx51cPYpXpUv77NY7" class="place__link">
+              <a href="https://goo.gl/maps/Nx51cPYpXpUv77NY7" class="place__link" target="_blank">
                 Faena House
               </a>
                 / Miami Beach, FL 33140
@@ -217,7 +218,9 @@
                 </div>
 
                 <h3 class="testimonial__name">
-                  <a href="#" class="link">Leslie Mckinney</a>
+                  <a href="#" class="link" target="_blank">
+                    Leslie Mckinney
+                  </a>
                 </h3>
 
                 <div class="testimonial__role">
@@ -240,7 +243,9 @@
               </div>
 
               <h3 class="testimonial__name">
-                <a href="#" class="link">Leslie Mckinney</a>
+                <a href="#" class="link" target="_blank">
+                  Leslie Mckinney
+                </a>
               </h3>
 
               <div class="testimonial__role">
@@ -262,7 +267,9 @@
               </div>
 
               <h3 class="testimonial__name">
-                <a href="#" class="link">Leslie Mckinney</a>
+                <a href="#" class="link" target="_blank">
+                  Leslie Mckinney
+                </a>
               </h3>
 
               <div class="testimonial__role">
@@ -315,7 +322,7 @@
                 </div>
 
                 <div>
-                  <a href="https://goo.gl/maps/Vo2Ke8x38DwwZWHZ7" class="contact-us__info-link">
+                  <a href="https://goo.gl/maps/Vo2Ke8x38DwwZWHZ7" class="contact-us__info-link" target="_blank">
                     400 first ave. n.
                     <br>
                     suite 700
@@ -328,16 +335,16 @@
 
             <div class="grid__item grid__item--8-12">
               <form action="#" method="get">
-                <input name="name" type="text" placeholder="Name" class="contact-us__field form-field">
-                <input name="email" type="email" placeholder="Email" class="contact-us__field form-field">
-                <textarea name="message" placeholder="Message" class="
+                <input name="name" type="text" placeholder="Name" required="" class="contact-us__field form-field">
+                <input name="email" type="email" placeholder="Email" required="" class="contact-us__field form-field">
+                <textarea name="message" placeholder="Message" required="" class="
                     contact-us__field
                     contact-us__field--last
                     form-field
                     form-field--textarea
                   "></textarea>
 
-                <button class="button button--primary">Consultation</button>
+                <button class="button button--primary" id="form-button">Consultation</button>
               </form>
             </div>
           </div>
