--- a/index.html
+++ b/index.html
@@ -343,6 +343,7 @@
                     form-field
                     form-field--textarea
                   "></textarea>
+                <div id="output-box"></div>
 
                 <button class="button button--primary" id="form-button">Consultation</button>
               </form>
